--- a/src/DBClientApp/view/Menu.fxml
+++ b/src/DBClientApp/view/Menu.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
-<?import javafx.scene.Group?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -14,7 +13,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="menuPane" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="662.0" prefWidth="904.0" style="-fx-border-radius: 2%;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DBClientApp.controller.MenuController" onMouseClicked="#onMouseClicked">
+<AnchorPane fx:id="menuPane" focusTraversable="true" onMouseClicked="#onMouseClicked" prefHeight="662.0" prefWidth="904.0" style="-fx-border-radius: 2%;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DBClientApp.controller.MenuController">
    <children>
       <Label id="mainMenuLabel" layoutX="28.0" layoutY="28.0" text="Main Menu">
          <font>
@@ -23,7 +22,6 @@
       </Label>
       <Pane focusTraversable="true" layoutX="24.0" layoutY="60.0" prefHeight="280.0" prefWidth="850.0" style="-fx-border-radius: 2%; -fx-border-color: black;">
          <children>
-            <Group />
             <Label layoutX="25.0" layoutY="25.0" text="Appointments">
                <font>
                   <Font name="System Bold" size="14.0" />
@@ -32,23 +30,23 @@
                   <Insets />
                </opaqueInsets>
             </Label>
-            <TableView fx:id="menuApptTable" depthTest="DISABLE" editable="true" layoutX="15.0" layoutY="60.0" prefHeight="160.0" prefWidth="820.0">
+            <TableView fx:id="menuApptTable" cacheShape="false" centerShape="false" depthTest="DISABLE" editable="true" focusTraversable="false" layoutX="15.0" layoutY="60.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="160.0" prefWidth="820.0" scaleShape="false">
               <columns>
-                <TableColumn fx:id="apptIDCol" minWidth="-Infinity" prefWidth="70.0" resizable="false" text="Appt. ID" />
-                <TableColumn fx:id="apptTitleCol" minWidth="-Infinity" resizable="false" text="Title" />
-                <TableColumn fx:id="apptDescriptionCol" minWidth="-Infinity" prefWidth="75.0" text="Description" />
+                <TableColumn fx:id="apptIDCol" minWidth="-Infinity" prefWidth="55.0" resizable="false" text="Appt. ID" />
+                <TableColumn fx:id="apptTitleCol" minWidth="-Infinity" prefWidth="65.0" resizable="false" text="Title" />
+                <TableColumn fx:id="apptDescriptionCol" minWidth="-Infinity" prefWidth="160.0" resizable="false" text="Description" />
                 <TableColumn fx:id="apptLocationCol" minWidth="-Infinity" prefWidth="75.0" resizable="false" text="Location" />
-                <TableColumn fx:id="apptContactCol" minWidth="-Infinity" resizable="false" text="Contact" />
-                <TableColumn fx:id="apptTypeCol" minWidth="-Infinity" prefWidth="100.0" text="Type" />
+                <TableColumn fx:id="apptContactCol" minWidth="-Infinity" prefWidth="90.0" resizable="false" text="Contact" />
+                <TableColumn fx:id="apptTypeCol" minWidth="-Infinity" prefWidth="60.0" resizable="false" text="Type" />
                 <TableColumn fx:id="apptStartCol" minWidth="-Infinity" prefWidth="100.0" resizable="false" text="Start Info" />
                 <TableColumn fx:id="apptEndCol" minWidth="-Infinity" prefWidth="100.0" resizable="false" text="End Info" />
-                <TableColumn fx:id="apptCustIDCol" minWidth="-Infinity" prefWidth="70.0" resizable="false" text="Cust. ID" />
-                <TableColumn fx:id="apptUserIDCol" minWidth="-Infinity" prefWidth="70.0" resizable="false" text="User ID" />
+                <TableColumn fx:id="apptCustIDCol" minWidth="-Infinity" prefWidth="50.0" resizable="false" text="Cust. ID" />
+                <TableColumn fx:id="apptUserIDCol" minWidth="-Infinity" prefWidth="50.0" resizable="false" text="User ID" />
               </columns>
             </TableView>
             <HBox alignment="CENTER" layoutX="428.0" layoutY="17.0" prefHeight="34.0" prefWidth="400.0" spacing="30.0">
                <children>
-                  <RadioButton fx:id="menuCurrentAppointments" mnemonicParsing="false" onAction="#menuRadioCurrent" text="Current Week">
+                  <RadioButton fx:id="menuWeekAppointments" mnemonicParsing="false" onAction="#menuRadioWeek" text="Current Week">
                      <toggleGroup>
                         <ToggleGroup fx:id="menuAppointmentType" />
                      </toggleGroup></RadioButton>
@@ -77,20 +75,19 @@
                   <Button fx:id="menuCustDeleteBtn" alignment="CENTER" mnemonicParsing="false" onAction="#menuCustDeleteClick" prefWidth="100.0" text="Delete" />
                </children>
             </HBox>
-            <Group />
             <Label layoutX="25.0" layoutY="25.0" prefHeight="20.0" prefWidth="100.0" text="Customers">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-            <TableView fx:id="menuCustTable" depthTest="DISABLE" editable="true" layoutX="15.0" layoutY="60.0" prefHeight="160.0" prefWidth="820.0">
+            <TableView fx:id="menuCustTable" cacheShape="false" centerShape="false" depthTest="DISABLE" editable="true" focusTraversable="false" layoutX="15.0" layoutY="60.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="160.0" prefWidth="820.0" scaleShape="false">
                <columns>
-                  <TableColumn fx:id="custIDCol" minWidth="-Infinity" prefWidth="70.0" text="Cust. ID" />
-                  <TableColumn fx:id="custNameCol" minWidth="-Infinity" prefWidth="150.0" text="Name" />
+                  <TableColumn fx:id="custIDCol" minWidth="-Infinity" prefWidth="60.800018310546875" text="Cust. ID" />
+                  <TableColumn fx:id="custNameCol" minWidth="-Infinity" prefWidth="159.99996948242188" text="Name" />
                   <TableColumn fx:id="custAddressCol" minWidth="-Infinity" prefWidth="225.0" text="Address" />
                   <TableColumn fx:id="custPostalCodeCol" minWidth="-Infinity" prefWidth="100.0" text="Postal Code" />
                   <TableColumn fx:id="custPhoneCol" minWidth="-Infinity" prefWidth="125.0" text="Phone" />
-                  <TableColumn fx:id="custCountryCol" minWidth="-Infinity" prefWidth="150.0" text="Country" />
+                  <TableColumn fx:id="custCountryCol" minWidth="-Infinity" prefWidth="135.0" text="Country" />
                </columns>
             </TableView>
          </children>
