--- a/src/DBClientApp/view/Login.fxml
+++ b/src/DBClientApp/view/Login.fxml
@@ -12,74 +12,88 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginPane" accessibleText="English" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseMoved="#onMouseMoved" onKeyPressed="#onKeyPressed" onMouseClicked="#onMouseClicked" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DBClientApp.controller.LoginController">
-   <children>
-      <Pane focusTraversable="true" layoutX="100.0" layoutY="50.0" prefHeight="400.0" prefWidth="400.0" style="-fx-border-color: black; -fx-border-radius: 2%; -fx-background-radius: 2%;" AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="50.0">
-         <children>
-            <GridPane alignment="CENTER" layoutX="11.0" layoutY="27.0" prefHeight="224.0" prefWidth="378.0" style="-fx-background-radius: 2%;">
-              <columnConstraints>
-                <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="184.60001220703126" minWidth="10.0" prefWidth="141.4" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.19998779296878" minWidth="10.0" prefWidth="237.40000000000003" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label fx:id="loginNameLbl" alignment="CENTER" maxWidth="150.0" prefWidth="75.0" text="User Name:" textAlignment="CENTER" GridPane.halignment="LEFT">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Label>
-                  <Label fx:id="loginPasswordLbl" alignment="CENTER" maxWidth="150.0" prefWidth="75.0" text="Password:" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Label>
-                  <TextField fx:id="loginUserTxt" maxWidth="150.0" onKeyPressed="#onKeyPressed" onAction="#loginUserTxtSearch" prefHeight="26.0" prefWidth="75.0" promptText="User Name" GridPane.columnIndex="1" GridPane.halignment="CENTER">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </TextField>
-                  <TextField fx:id="loginPasswordTxt" accessibleRole="PASSWORD_FIELD"  maxWidth="150.0"  onKeyPressed="#onKeyPressed" onAction="#loginPasswordTxtSearch" prefWidth="75.0" promptText="Password" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </TextField>
-                  <Label fx:id="loginTimeLbl" alignment="CENTER" maxWidth="150.0" prefWidth="75.0" text="Time Zone:" textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Label>
-                  <Label fx:id="loginTimeReadout" layoutX="60.0" layoutY="180.0" text="Needs Code" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets />
-                     </GridPane.margin>
-                  </Label>
-               </children>
-               <padding>
-                  <Insets bottom="5.0" top="5.0" />
-               </padding>
-            </GridPane>
-            <HBox alignment="CENTER" layoutX="100.0" layoutY="251.0" prefHeight="35.0" prefWidth="200.0" spacing="20.0">
-               <children>
-                  <Button fx:id="loginClearBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onKeyPressed="#onKeyPressed" onAction="#loginClearClick" prefWidth="70.0" text="Clear" textAlignment="CENTER" />
-                  <Button fx:id="loginSubmitBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onKeyPressed="#onKeyPressed" onAction="#loginSubmitClick" prefWidth="70.0" text="Submit" textAlignment="CENTER" />
-               </children>
-            </HBox>
-            <Label fx:id="headerLabel" alignment="CENTER" layoutX="14.0" layoutY="3.0" text="Login" textAlignment="CENTER">
-               <font>
-                  <Font size="18.0" />
-               </font>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets top="5.0" />
-               </padding>
-            </Label>
-         </children>
-      </Pane>
-   </children>
+<AnchorPane fx:id="loginPane" accessibleText="English" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" onMouseMoved="#onMouseMoved" onKeyPressed="#onKeyPressed"
+            onMouseClicked="#onMouseClicked" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="DBClientApp.controller.LoginController">
+   <Pane focusTraversable="true" layoutX="100.0" layoutY="50.0" prefHeight="400.0" prefWidth="400.0"
+         style="-fx-border-color: black; -fx-border-radius: 2%; -fx-background-radius: 2%;"
+         AnchorPane.bottomAnchor="50.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0"
+         AnchorPane.topAnchor="50.0">
+      <GridPane alignment="CENTER" layoutX="11.0" layoutY="27.0" prefHeight="224.0" prefWidth="378.0"
+                style="-fx-background-radius: 2%;">
+         <columnConstraints>
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="184.60001220703126" minWidth="10.0"
+                               prefWidth="141.4"/>
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="250.19998779296878" minWidth="10.0"
+                               prefWidth="237.40000000000003"/>
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
+         </rowConstraints>
+         <padding>
+            <Insets bottom="5.0" top="5.0"/>
+         </padding>
+         <Label fx:id="loginNameLbl" alignment="CENTER" maxWidth="150.0" prefWidth="75.0" text="User Name:"
+                textAlignment="CENTER" GridPane.halignment="LEFT">
+            <GridPane.margin>
+               <Insets/>
+            </GridPane.margin>
+         </Label>
+         <Label fx:id="loginPasswordLbl" alignment="CENTER" maxWidth="150.0" prefWidth="75.0" text="Password:"
+                textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="1">
+            <GridPane.margin>
+               <Insets/>
+            </GridPane.margin>
+         </Label>
+         <TextField fx:id="loginUserTxt" maxWidth="150.0" onKeyPressed="#onKeyPressed"
+                    onAction="#loginUserTxtSearch" prefHeight="26.0" prefWidth="75.0" promptText="User Name"
+                    GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <GridPane.margin>
+               <Insets/>
+            </GridPane.margin>
+         </TextField>
+         <TextField fx:id="loginPasswordTxt" accessibleRole="PASSWORD_FIELD" maxWidth="150.0"
+                    onKeyPressed="#onKeyPressed" onAction="#loginPasswordTxtSearch" prefWidth="75.0"
+                    promptText="Password" GridPane.columnIndex="1" GridPane.halignment="CENTER"
+                    GridPane.rowIndex="1">
+            <GridPane.margin>
+               <Insets/>
+            </GridPane.margin>
+         </TextField>
+         <Label fx:id="loginTimeLbl" alignment="CENTER" maxWidth="150.0" prefWidth="75.0" text="Time Zone:"
+                textAlignment="CENTER" GridPane.halignment="LEFT" GridPane.rowIndex="2">
+            <GridPane.margin>
+               <Insets/>
+            </GridPane.margin>
+         </Label>
+         <Label fx:id="loginTimeReadout" layoutX="60.0" layoutY="180.0" text="Needs Code" textAlignment="CENTER"
+                GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+            <GridPane.margin>
+               <Insets/>
+            </GridPane.margin>
+         </Label>
+      </GridPane>
+      <HBox alignment="CENTER" layoutX="100.0" layoutY="251.0" prefHeight="35.0" prefWidth="200.0" spacing="20.0">
+         <Button fx:id="loginClearBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                 onKeyPressed="#onKeyPressed" onAction="#loginClearClick" prefWidth="70.0" text="Clear"
+                 textAlignment="CENTER"/>
+         <Button fx:id="loginSubmitBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                 onKeyPressed="#onKeyPressed" onAction="#loginSubmitClick" prefWidth="70.0" text="Submit"
+                 textAlignment="CENTER"/>
+      </HBox>
+      <Label fx:id="headerLabel" alignment="CENTER" layoutX="14.0" layoutY="3.0" text="Login" textAlignment="CENTER">
+         <font>
+            <Font size="18.0"/>
+         </font>
+         <opaqueInsets>
+            <Insets/>
+         </opaqueInsets>
+         <padding>
+            <Insets top="5.0"/>
+         </padding>
+      </Label>
+   </Pane>
 </AnchorPane>
