--- a/src/DBClientApp/view/Report.fxml
+++ b/src/DBClientApp/view/Report.fxml
@@ -15,127 +15,157 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="reportPane" focusTraversable="true" onMouseClicked="#onMouseClicked" prefHeight="660.0" prefWidth="900.0" style="-fx-border-radius: 2%;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="DBClientApp.controller.ReportController">
-   <children>
-      <Pane focusTraversable="true" layoutX="24.0" layoutY="60.0" prefHeight="565.0" prefWidth="850.0" style="-fx-border-color: black; -fx-border-radius: 2%;">
-         <children>
-            <GridPane alignment="CENTER" prefHeight="560.0" prefWidth="850.0" style="-fx-border-radius: 2%;">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="40.0" valignment="CENTER" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="BOTTOM" vgrow="SOMETIMES" />
-                  <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="175.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="35.0" valignment="CENTER" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="User Reporting">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                     <opaqueInsets>
-                        <Insets left="10.0" />
-                     </opaqueInsets>
-                     <padding>
-                        <Insets left="10.0" />
-                     </padding>
-                  </Label>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Schedule By Contact" textAlignment="CENTER" GridPane.columnIndex="1">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="reportContactCombo" focusTraversable="false" onAction="#reportContactComboClick" prefWidth="150.0" promptText="Choose Contact" snapToPixel="false" visibleRowCount="3" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-                  <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="1">
-                     <children>
-                        <TableView fx:id="reportScheduleTable" prefHeight="200.0" prefWidth="825.0">
-                          <columns>
-                            <TableColumn fx:id="reportScheduleApptCol" minWidth="93.0" prefWidth="75.0" text="Appt. ID" />
-                            <TableColumn fx:id="reportScheduleTitleCol" minWidth="93.0" prefWidth="75.0" text="Title" />
-                              <TableColumn fx:id="reportScheduleTypeCol" minWidth="93.0" prefWidth="75.0" text="Type" />
-                              <TableColumn fx:id="reportScheduleDescCol" minWidth="93.0" prefWidth="75.0" text="Description" />
-                              <TableColumn fx:id="reportScheduleStartCol" minWidth="93.0" prefWidth="75.0" text="Start Info" />
-                              <TableColumn fx:id="reportScheduleEndCol" minWidth="93.0" prefWidth="75.0" text="End Info" />
-                              <TableColumn fx:id="reportScheduleCustCol" minWidth="93.0" prefWidth="75.0" text="Cust. ID" />
-                          </columns>
-                           <columnResizePolicy>
-                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                           </columnResizePolicy>
-                        </TableView>
-                     </children>
-                  </HBox>
-                  <Separator prefWidth="200.0" style="-fx-background-color: black;" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets left="5.0" right="5.0" />
-                     </GridPane.margin>
-                  </Separator>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Customer Appointments by Type" textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="3">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="reportTypeCombo" onAction="#reportTypeComboClick" prefWidth="150.0" promptText="Choose Customer" visibleRowCount="3" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
-                  <TableView fx:id="reportTypeTable" prefHeight="170.0" prefWidth="270.0" GridPane.rowIndex="5">
+<AnchorPane fx:id="reportPane" focusTraversable="true" onMouseClicked="#onMouseClicked" prefHeight="660.0"
+            prefWidth="900.0" style="-fx-border-radius: 2%;" xmlns="http://javafx.com/javafx/17"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="DBClientApp.controller.ReportController">
+    <Pane focusTraversable="true" layoutX="24.0" layoutY="60.0" prefHeight="565.0" prefWidth="850.0"
+          style="-fx-border-color: black; -fx-border-radius: 2%;">
+        <GridPane alignment="CENTER" prefHeight="560.0" prefWidth="850.0" style="-fx-border-radius: 2%;">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="40.0" valignment="CENTER" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="200.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="BOTTOM" vgrow="SOMETIMES"/>
+                <RowConstraints fillHeight="false" minHeight="10.0" prefHeight="30.0" valignment="CENTER"
+                                vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="175.0" vgrow="SOMETIMES"/>
+                <RowConstraints minHeight="10.0" prefHeight="35.0" valignment="CENTER" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="User Reporting">
+                <font>
+                    <Font name="System Bold" size="14.0"/>
+                </font>
+                <opaqueInsets>
+                    <Insets left="10.0"/>
+                </opaqueInsets>
+                <padding>
+                    <Insets left="10.0"/>
+                </padding>
+            </Label>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Schedule By Contact" textAlignment="CENTER"
+                   GridPane.columnIndex="1">
+                <font>
+                    <Font name="System Bold" size="14.0"/>
+                </font>
+            </Label>
+            <ComboBox fx:id="reportContactCombo" focusTraversable="false" onAction="#reportContactComboClick"
+                      prefWidth="150.0" promptText="Choose Contact" snapToPixel="false" visibleRowCount="3"
+                      GridPane.columnIndex="2" GridPane.halignment="CENTER"/>
+            <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnSpan="3"
+                  GridPane.rowIndex="1">
+                <TableView fx:id="reportScheduleTable" prefHeight="200.0" prefWidth="825.0">
                     <columns>
-                      <TableColumn fx:id="reportTypeTypeCol" minWidth="-1.0" prefWidth="135.0" text="Appointment Type" />
-                        <TableColumn fx:id="reportTypeCountCol" minWidth="-1.0" prefWidth="135.0" text="Count by Type" />
+                        <TableColumn fx:id="reportScheduleApptCol" minWidth="93.0" prefWidth="75.0"
+                                     text="Appt. ID"/>
+                        <TableColumn fx:id="reportScheduleTitleCol" minWidth="93.0" prefWidth="75.0"
+                                     text="Title"/>
+                        <TableColumn fx:id="reportScheduleTypeCol" minWidth="93.0" prefWidth="75.0"
+                                     text="Type"/>
+                        <TableColumn fx:id="reportScheduleDescCol" minWidth="93.0" prefWidth="75.0"
+                                     text="Description"/>
+                        <TableColumn fx:id="reportScheduleStartCol" minWidth="93.0" prefWidth="75.0"
+                                     text="Start Info"/>
+                        <TableColumn fx:id="reportScheduleEndCol" minWidth="93.0" prefWidth="75.0"
+                                     text="End Info"/>
+                        <TableColumn fx:id="reportScheduleCustCol" minWidth="93.0" prefWidth="75.0"
+                                     text="Cust. ID"/>
                     </columns>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                     <GridPane.margin>
-                        <Insets left="5.0" />
-                     </GridPane.margin>
-                  </TableView>
-                  <Label alignment="CENTER" contentDisplay="CENTER" text="Customer Appointments by Month" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="reportMonthCombo" onAction="#reportMonthComboClick" prefWidth="150.0" promptText="Choose Customer" visibleRowCount="3" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TableView fx:id="reportLocationTable" prefHeight="170.0" prefWidth="270.0" GridPane.columnIndex="2" GridPane.rowIndex="5">
-                     <columns>
-                        <TableColumn fx:id="reportLocationCol" minWidth="-1.0" prefWidth="135.0" text="Appointment Location" />
-                        <TableColumn fx:id="reportLocationCountCol" minWidth="-1.0" prefWidth="135.0" text="Count by Location" />
-                     </columns>
-                     <opaqueInsets>
-                        <Insets />
-                     </opaqueInsets>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                     <GridPane.margin>
-                        <Insets right="5.0" />
-                     </GridPane.margin>
-                  </TableView>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="357.0" layoutY="304.0" text="Customer Appointments by Location" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                  </Label>
-                  <ComboBox fx:id="reportLocationCombo" onAction="#reportLocationComboClick" prefWidth="150.0" promptText="Choose Customer" visibleRowCount="3" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-                  <TableView fx:id="reportMonthTable" prefHeight="170.0" prefWidth="270.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
-                     <columns>
-                        <TableColumn fx:id="reportMonthMonthCol" minWidth="-1.0" prefWidth="135.0" text="Appointment Month" />
-                        <TableColumn fx:id="reportMonthCountCol" minWidth="-1.0" prefWidth="135.0" text="Count by Month" />
-                     </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
-                  <Button fx:id="reportBackBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#reportBackClick" prefHeight="20.0" prefWidth="150.0" style="-fx-border-radius: 2%; -fx-border-color: black;" text="Back" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-               </children>
-            </GridPane>
-         </children>
-      </Pane>
-   </children>
+                    <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                    </columnResizePolicy>
+                </TableView>
+            </HBox>
+            <Separator prefWidth="200.0" style="-fx-background-color: black;" GridPane.columnSpan="2147483647"
+                       GridPane.rowIndex="2">
+                <GridPane.margin>
+                    <Insets left="5.0" right="5.0"/>
+                </GridPane.margin>
+            </Separator>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Customer Appointments by Type"
+                   textAlignment="CENTER" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                <font>
+                    <Font name="System Bold" size="14.0"/>
+                </font>
+            </Label>
+            <ComboBox fx:id="reportTypeCombo" onAction="#reportTypeComboClick" prefWidth="150.0"
+                      promptText="Choose Customer" visibleRowCount="3" GridPane.halignment="CENTER"
+                      GridPane.rowIndex="4"/>
+            <TableView fx:id="reportTypeTable" prefHeight="170.0" prefWidth="270.0" GridPane.rowIndex="5">
+                <columns>
+                    <TableColumn fx:id="reportTypeTypeCol" minWidth="-1.0" prefWidth="135.0"
+                                 text="Appointment Type"/>
+                    <TableColumn fx:id="reportTypeCountCol" minWidth="-1.0" prefWidth="135.0"
+                                 text="Count by Type"/>
+                </columns>
+                <opaqueInsets>
+                    <Insets/>
+                </opaqueInsets>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                </columnResizePolicy>
+                <GridPane.margin>
+                    <Insets left="5.0"/>
+                </GridPane.margin>
+            </TableView>
+            <Label alignment="CENTER" contentDisplay="CENTER" text="Customer Appointments by Month"
+                   textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                <font>
+                    <Font name="System Bold" size="14.0"/>
+                </font>
+            </Label>
+            <ComboBox fx:id="reportMonthCombo" onAction="#reportMonthComboClick" prefWidth="150.0"
+                      promptText="Choose Customer" visibleRowCount="3" GridPane.columnIndex="1"
+                      GridPane.rowIndex="4"/>
+            <TableView fx:id="reportLocationTable" prefHeight="170.0" prefWidth="270.0" GridPane.columnIndex="2"
+                       GridPane.rowIndex="5">
+                <columns>
+                    <TableColumn fx:id="reportLocationCol" minWidth="-1.0" prefWidth="135.0"
+                                 text="Appointment Location"/>
+                    <TableColumn fx:id="reportLocationCountCol" minWidth="-1.0" prefWidth="135.0"
+                                 text="Count by Location"/>
+                </columns>
+                <opaqueInsets>
+                    <Insets/>
+                </opaqueInsets>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                </columnResizePolicy>
+                <GridPane.margin>
+                    <Insets right="5.0"/>
+                </GridPane.margin>
+            </TableView>
+            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="357.0" layoutY="304.0"
+                   text="Customer Appointments by Location" textAlignment="CENTER" GridPane.columnIndex="2"
+                   GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="BOTTOM">
+                <font>
+                    <Font name="System Bold" size="14.0"/>
+                </font>
+            </Label>
+            <ComboBox fx:id="reportLocationCombo" onAction="#reportLocationComboClick" prefWidth="150.0"
+                      promptText="Choose Customer" visibleRowCount="3" GridPane.columnIndex="2"
+                      GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER"/>
+            <TableView fx:id="reportMonthTable" prefHeight="170.0" prefWidth="270.0" GridPane.columnIndex="1"
+                       GridPane.rowIndex="5">
+                <columns>
+                    <TableColumn fx:id="reportMonthMonthCol" minWidth="-1.0" prefWidth="135.0"
+                                 text="Appointment Month"/>
+                    <TableColumn fx:id="reportMonthCountCol" minWidth="-1.0" prefWidth="135.0"
+                                 text="Count by Month"/>
+                </columns>
+                <columnResizePolicy>
+                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+                </columnResizePolicy>
+            </TableView>
+            <Button fx:id="reportBackBtn" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                    onAction="#reportBackClick" prefHeight="20.0" prefWidth="150.0"
+                    style="-fx-border-radius: 2%; -fx-border-color: black;" text="Back" textAlignment="CENTER"
+                    GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="6"
+                    GridPane.valignment="CENTER"/>
+        </GridPane>
+    </Pane>
 </AnchorPane>
